crates/check_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintignore_and_ignore_patterns.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{ "linter": { "enabled": true } }
```

## `.eslintignore`

```eslintignore
*.test.js
```

## `.eslintrc.json`

```json
{
        "ignorePatterns": ["**/*.spec.js", "!x.spec.js", "/dist"],
        "rules": { "eqeqeq": "off" }
    }
```

# Emitted Messages

```block
check.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1    │ - {·"linter":·{·"enabled":·true·}·}
       1 │ + {
       2 │ + → "linter":·{
       3 │ + → → "enabled":·true,
       4 │ + → → "rules":·{
       5 │ + → → → "recommended":·false,
       6 │ + → → → "suspicious":·{·"noDoubleEquals":·"off"·}
       7 │ + → → },
       8 │ + → → "includes":·[
       9 │ + → → → "**",
      10 │ + → → → "**/*.spec.js",
      11 │ + → → → "!**/x.spec.js",
      12 │ + → → → "dist",
      13 │ + → → → "**",
      14 │ + → → → "!**/*.test.js"
      15 │ + → → ]
      16 │ + → }
      17 │ + }
      18 │ + 
  

```

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 100% (1/1) of the rules can be migrated.
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - check.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ check migrate --write
  

```
