crates/check_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcjson_fix.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": false,
      "complexity": { "noUselessLabel": "error", "useLiteralKeys": "off" },
      "security": { "noGlobalEval": "warn" },
      "style": { "useDefaultParameterLast": "off" },
      "suspicious": { "noDoubleEquals": "warn", "useGetterReturn": "error" }
    },
    "includes": ["**", "**/*.test.js"]
  },
  "javascript": { "globals": ["var1", "var2"] },
  "overrides": [
    {
      "includes": ["bin/*.js", "lib/*.js", "!*.test.js"],
      "linter": { "rules": { "suspicious": { "noDoubleEquals": "off" } } }
    }
  ]
}
```

## `.eslintrc.json`

```json
{
        "ignorePatterns": [
            "**/*.test.js", // trailing comma amd comment
        ],
        "globals": {
            "var1": "writable",
            "var2": "readonly"
        },
        "rules": {
            "dot-notation": 0,
            "default-param-last": "off",
            "eqeqeq": "warn",
            "getter-return": [2,
                // support unknown options
                { "allowImplicit": true }
            ],
            "no-eval": 1,
            "no-extra-label": ["error"]
        },
        "overrides": [{
            "files": ["bin/*.js", "lib/*.js"],
            "excludedFiles": "*.test.js",
            "rules": {
                "eqeqeq": ["off"]
            }
        }],
        "unknownField": "ignored"
    }
```

# Emitted Messages

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 100% (6/6) of the rules have been migrated.
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - check.json: configuration successfully migrated.
  

```
