crates/check_cli/tests/snapshots/main_commands_migrate_eslint/migrate_eslintrcjson_missing_checkjson.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `.eslintrc.json`

```json
{}
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: Check couldn't find the Check configuration file.
  


```

# Emitted Messages

```block
If this project has not yet been set up with Check yet, please follow the Getting Started guide first.
```
